@@ -4,8 +4,8 @@ Type: Package
 Depends: R (>= 2.12.0),graphics,grDevices,KernSmooth
 Enhances: p3state.msm,etm
 Title: Estimation of transitions probabilities in multistate models
-Version: 1.1.0
-Date: 2013-04-28
+Version: 1.1.1
+Date: 2014-02-06
 Author: Artur Agostinho Araujo, Javier Roca-Pardinas <roca@uvigo.es>
         and Luis Meira-Machado <lmachado@math.uminho.pt>
 Maintainer: Artur Agostinho Araujo <artur.stat@gmail.com>
@@ -14,7 +14,7 @@ Description: Estimation of transition probabilities for the
 License: GPL (>= 2)
 LazyLoad: yes
 LazyData: yes
-Packaged: 2013-04-28 19:45:04 UTC; Owner
+Packaged: 2014-02-06 19:50:52 UTC; Owner
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-05-03 10:53:53
+Date/Publication: 2014-03-18 15:19:43
