@@ -1,5 +1,5 @@
-53ae836e8f38fcab478130b81ff6d942 *DESCRIPTION
-e9e36f78a72cf9b8ca789afd394459b3 *NAMESPACE
+d35b150885fc221d4a4031da24e54b34 *DESCRIPTION
+b0bf09d2898a38eb351124beccc7e50d *NAMESPACE
 7cbfbc304a4782df13c1698a8298b2f2 *R/BtoTPCmsm.R
 9f0e4b64b87845144e986f187891f94e *R/BtoTPmsm.R
 c5e4150083c4c0df9cd0ed04c808f4f7 *R/Clean.R
@@ -13,19 +13,19 @@ e41e5e254d3582b3342565e8e7a74819 *R/TPmsmOut.R
 dbcdc21be4acd1f0b70e16a32aa17d53 *R/TransMatrix.R
 27fcbce8cea25f7650b5c9bf3b2fbb83 *R/TransMethod.R
 2d232112ca6e12c06e755cc8722da78a *R/TransPROB.R
-16d47bb03084f0b4bb16d47940354511 *R/TransWidth.R
+fa70012c799d7caa41f2540ff8ef0c32 *R/TransWidth.R
 c368a1837f63377023062804836e194b *R/addlegend.R
 50df5087f0502ff8120d1adaf69b83f5 *R/as.data.frame.survTP.R
-50a042d2a361fa2dcd50ab545480fe5e *R/contour.TPCmsm.R
+99d4c778665968abfb4e2a1571ef35b3 *R/contour.TPCmsm.R
 eff1a01ef44fe46535d794b61bba84b2 *R/corrTP.R
 b4eb9fb28189b87c6c9ffb3adf54dc3f *R/dgpTP.R
-732b136808d6d8b123d219f9f0e1971c *R/image.TPCmsm.R
-9d63e8e6c2cb97f86c01fa1ded3e411e *R/lines.TPCmsm.R
-94ca0720f3de9c1f71dc3a5b3edc6a6e *R/lines.TPmsm.R
+0834eca9d8420f20f558dcbd463b637a *R/image.TPCmsm.R
+7f73b7bc7c51ceff26fa10f70f70c395 *R/lines.TPCmsm.R
+d66cd24970715675f628605e6604ff1d *R/lines.TPmsm.R
 917c6c97c0b475117a21277a897328a2 *R/methods.R
 4a9e7d859d907bca18310b068970cbe1 *R/object.R
-2719f9bfe9856187cbbecdb3de437ba0 *R/plot.TPCmsm.R
-e2234a0711976c469c44d38545f21cd0 *R/plot.TPmsm.R
+248fd46d7d7f031306fb6849304548f7 *R/plot.TPCmsm.R
+14086e6269362768aa0e8911ce36db47 *R/plot.TPmsm.R
 95d1ab024aa8df0dff877905f6b4c700 *R/print.TPCmsm.R
 9b707cd8165a3dd881201e9021705f6f *R/print.TPmsm.R
 293af741fde4d8bc6cf513e7e6c88572 *R/survTP.R
@@ -45,8 +45,8 @@ da866f2ae5c1284a654e281e65b770d7 *R/uniqueTP.R
 fb0a5e4cf8fe184035b1cb097a9aed63 *data/colonTP.rda
 1dbd4cc350ce75f439f4f80d5ce97432 *data/heartTP.rda
 c1b36f49cb33cfa3745e561cefcb3ef2 *inst/CITATION
-08b158b8e989c860b8b0167511ead06b *inst/NEWS.Rd
-b082491c460fd6f09f3fd708bc470f71 *man/TPmsm-package.Rd
+8e3bd72c1f045501193b83c6c8e1fd83 *inst/NEWS.Rd
+d15aa2f2ab56aa0e82878b46f1ced874 *man/TPmsm-package.Rd
 f139db5a4dc5f9c77d5bde6a26d2c19c *man/TPmsmOut.Rd
 91cc52cd1fc44f19a3cd66b2eaea5269 *man/as.data.frame.survTP.Rd
 8e6cc6a2e96307a980f2e1a9e9f760b0 *man/bladderTP.Rd
@@ -58,16 +58,16 @@ f5248c72a5f604cdda38e2dd6dc1f2b5 *man/corrTP.Rd
 2a5bb64903e543d4e7f2fb7946f28c22 *man/image.TPCmsm.Rd
 2e89cb26370e0d83db824606ed8a52e1 *man/lines.TPCmsm.Rd
 a96d47aefaad2617efa2a63791fb3b6c *man/lines.TPmsm.Rd
-68d3273aa791124ee78764b91f48cbb6 *man/plot.TPCmsm.Rd
+ecf3d39d911fee03405d48252d889370 *man/plot.TPCmsm.Rd
 6f4d7b986b02b9c2ffc924703252c626 *man/plot.TPmsm.Rd
 6484d798ab8df5c0c33e17d9ed783cf9 *man/survTP.Rd
 08be4ea6100bd8023798367c78efb44a *man/threadsTP.Rd
 52bd91dde336e2d390c0d64290160047 *man/transAJ.Rd
-cbd12326c808e9324e64bff06e84a579 *man/transIPCW.Rd
+4c94ec5c80e31f8928853aa004b541fd *man/transIPCW.Rd
 68b08ab197041d2a3abd4eb038bf6455 *man/transKMPW.Rd
 a945bfcdedf2b49d2599b8aeac472379 *man/transKMW.Rd
-868fb6ead6afa1e30aedf1e86af043ce *man/transLIN.Rd
-b8c4fe641fd570492926ab91e9df1eaf *man/transLS.Rd
+6572cf7bf72b383f14b71729b31ae8e4 *man/transLIN.Rd
+421c8a6d9dcffb092bf11347ca097212 *man/transLS.Rd
 501a646bf5603e6e2597c651a9411885 *man/transPAJ.Rd
 8458f00ab45039091a157d9f34faea57 *src/BtoTPCmsm.c
 670d47a6af112f51ac253206e9f9319c *src/BtoTPCmsm.h
